package tenniscourts.entities;

/**
 * @author Emma Sommerova
 */
public enum PlayType {
    SINGLES_PLAY,
    DOUBLES_PLAY
}
